# app/controllers/api/v1/registries_controller.rb
@@ -1,0 +1,5 @@
+class Api::V1::RegistriesController < Api::V1::ApplicationController
+  def index
+    @registries = Registry.all.order(:name)
+  end
+end
